[P20] Fixed overflow bug

--- a/src/app/modules/skills/components/skill/skill.component.scss
+++ b/src/app/modules/skills/components/skill/skill.component.scss
@@ -31,6 +31,7 @@
     grid-template-areas: 'labels content';
     grid-template-columns: repeat(2, minmax(150px, 50%));
     overflow-x: auto;
+    overflow-y: hidden;
     @include form-shadow($blur-color);
   }
 
